adjust semantics of highlights, add correctly offset alignment

--- a/pidgin/css/pidgin.css
+++ b/pidgin/css/pidgin.css
@@ -513,27 +513,112 @@ article.topic-summary a:hover {
     padding: .6em 1.6em;
 }
 
+
+article.topic-summary.highlight {
+    grid-column: 2 / 11;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-areas: 
+        "d d d d g g g"
+        "d d d d g g g"
+        "d d d d g g g"
+        "c c c c g g g";
+    /* display: grid; */
+    /* grid-template-columns: repeat(9, 1fr); */
+    /* grid-template-rows: repeat(5, 1fr); */
+    position: relative;
+}
+
+article.topic-summary.highlight .description {
+    /* grid-column: 1 / 6; */
+    /* grid-row: 1 / 5; */
+    /* position: absolute; */
+    grid-area: d;
+    /* top: 0;
+    left: 0; */
+    padding: 4em;
+    box-sizing: border-box;
+    /* width: 60%; */
+
+    background: white;
+    border: 4px solid black;
+    border-radius: 20px;
+    z-index: 10;
+}
+
+article.topic-summary.highlight .description h2 {
+    margin: 0;
+}
+
+article.topic-summary.highlight figure {
+    /* grid-column: 5 / 10; */
+    /* grid-row: 1; */
+    grid-area: g;
+    /* position: absolute;
+    top: 0;
+    right: 0; */
+    margin-top: 2em;
+
+    display: inline-block;
+    background: var(--vocabulary-neutral-color-lighter-gray);
+    border-radius: 16px;
+    content: '';
+    width: 120%;
+    margin-left: -20%;
+    height: 450px;
+    z-index: -10; 
+}
+
+
+
+
+
+article.topic-summary.highlight.community{
+    grid-template-areas: 
+        "g g g p p p p"
+        "g g g d d d d"
+        "g g g d d d d"
+        "c c c e e e e";
+}
+
+article.topic-summary.highlight.community .description {
+    background: #FFD9CC;
+}
+
+article.topic-summary.highlight.community figure {
+    margin-left: 0;
+}
+
+
+
+article.topic-summary.highlight.support .description {
+    background: #E0FF00;
+}
+
+
+
+
 article.topic-summary.focus-area {
     grid-column: 2 / 11;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
+
+article.topic-summary.focus-area figure {
+    display: inline-block;
+    background: var(--vocabulary-neutral-color-lighter-gray);
+    border-radius: 16px;
+    content: '';
+    width: 100%;
+    /* margin-left: -20%; */
+    height: 450px;
+    /* z-index: -10;  */
+}
+
 article.topic-summary.focus-area:nth-of-type(even) figure {
     order: -1;
 }
-
-article.topic-summary.focus-area a {
-    /* --underline-background-color: #2E1FB8;
-    background:#2E1FB8;
-    color: white; */
-
-    /* --underline-background-color: #ADFF00;
-    background:#ADFF00;
-    color: black; */
-}
-
-
 
 article:nth-child(3n + 2 of .topic-summary.focus-area) a {
     --underline-background-color: #2E1FB8;
@@ -553,6 +638,15 @@ article:nth-child(3n + 1 of .topic-summary.focus-area) a {
     color: black;
 }
 
+article.topic-summary.focus-area a:hover {
+    --underline-background-color: #black;
+    background:black;
+    color: white; */
+
+    /* padding: .8em 1.8em; */
+
+    border: none;
+}
 
 
 
